Harden partner event synchronization API
